[#23] Define new paths for improved GET/POST requests, rename former paths
