# variant-service/api/restapi/configure_variant_service.go
@@ -56,13 +56,31 @@ func configureAPI(api *operations.VariantServiceAPI) http.Handler {
 
 	api.JSONProducer = runtime.JSONProducer()
 
-	api.MainGetVariantsHandler = operations.MainGetVariantsHandlerFunc(func(params operations.MainGetVariantsParams) middleware.Responder {
+	api.GetCallsHandler = operations.GetCallsHandlerFunc(func(params operations.GetCallsParams) middleware.Responder {
+		return middleware.NotImplemented("operation .GetCalls has not yet been implemented")
+	})
+	api.GetIndividualsHandler = operations.GetIndividualsHandlerFunc(func(params operations.GetIndividualsParams) middleware.Responder {
+		return middleware.NotImplemented("operation .GetIndividuals has not yet been implemented")
+	})
+	api.GetIndividualsByVariantHandler = operations.GetIndividualsByVariantHandlerFunc(func(params operations.GetIndividualsByVariantParams) middleware.Responder {
+		return middleware.NotImplemented("operation .GetIndividualsByVariant has not yet been implemented")
+	})
+	api.GetOneCallHandler = operations.GetOneCallHandlerFunc(func(params operations.GetOneCallParams) middleware.Responder {
+		return middleware.NotImplemented("operation .GetOneCall has not yet been implemented")
+	})
+	api.GetOneIndividualHandler = operations.GetOneIndividualHandlerFunc(func(params operations.GetOneIndividualParams) middleware.Responder {
+		return middleware.NotImplemented("operation .GetOneIndividual has not yet been implemented")
+	})
+	api.GetOneVariantHandler = operations.GetOneVariantHandlerFunc(func(params operations.GetOneVariantParams) middleware.Responder {
+		return middleware.NotImplemented("operation .GetOneVariant has not yet been implemented")
+	})
+	api.GetVariantsHandler = operations.GetVariantsHandlerFunc(func(params operations.GetVariantsParams) middleware.Responder {
 		tx, err := pop.Connect("development")
 		if err != nil {
 			customErrors.Log(err, 500,"restapi.api.MainGetVariantHandler",
 				"Failed to connect to database: development")
 			errPayload := customErrors.DefaultInternalServerError()
-			return operations.NewMainGetVariantsInternalServerError().WithPayload(errPayload)
+			return operations.NewGetVariantsInternalServerError().WithPayload(errPayload)
 		}
 
 		conditions := ""
@@ -86,7 +104,7 @@ func configureAPI(api *operations.VariantServiceAPI) http.Handler {
 				"Please provide parameters in the query string for 'chromosome', 'start', and/or 'end'."
 			customErrors.Log(nil, 403,"api.MainGetVariantsHandler", message)
 			errPayload := &apimodels.Error{Code: 403001, Message: &message}
-			return operations.NewMainGetVariantsForbidden().WithPayload(errPayload)
+			return operations.NewGetVariantsForbidden().WithPayload(errPayload)
 		}
 
 		if err != nil {
@@ -94,29 +112,35 @@ func configureAPI(api *operations.VariantServiceAPI) http.Handler {
 			customErrors.Log(err, 500,"restapi.api.MainGetVariantHandler",
 				"Problems getting variants from database")
 			errPayload := customErrors.DefaultInternalServerError()
-			return operations.NewMainGetVariantsInternalServerError().WithPayload(errPayload)
+			return operations.NewGetVariantsInternalServerError().WithPayload(errPayload)
 		}
 
 		var apiVariants []*apimodels.Variant
 		for _, dataVariant := range dataVariants {
 			apiVariant, errPayload := transformations.VariantDataToAPIModel(dataVariant)
 			if errPayload != nil {
-				return operations.NewMainGetVariantsInternalServerError().WithPayload(errPayload)
+				return operations.NewGetVariantsInternalServerError().WithPayload(errPayload)
 			}
 			apiVariants = append(apiVariants, apiVariant)
 		}
 
-		return operations.NewMainGetVariantsOK().WithPayload(apiVariants)
+		return operations.NewGetVariantsOK().WithPayload(apiVariants)	})
+	api.GetVariantsByIndividualHandler = operations.GetVariantsByIndividualHandlerFunc(func(params operations.GetVariantsByIndividualParams) middleware.Responder {
+		return middleware.NotImplemented("operation .GetVariantsByIndividual has not yet been implemented")
 	})
-	api.MainPostVariantHandler = operations.MainPostVariantHandlerFunc(func(params operations.MainPostVariantParams) middleware.Responder {
-		err := params.Variant.Validate(strfmt.NewFormats())
-
-		tx, err := pop.Connect("development")
+	api.PostCallHandler = operations.PostCallHandlerFunc(func(params operations.PostCallParams) middleware.Responder {
+		return middleware.NotImplemented("operation .PostCall has not yet been implemented")
+	})
+	api.PostIndividualHandler = operations.PostIndividualHandlerFunc(func(params operations.PostIndividualParams) middleware.Responder {
+		return middleware.NotImplemented("operation .PostIndividual has not yet been implemented")
+	})
+	api.PostVariantHandler = operations.PostVariantHandlerFunc(func(params operations.PostVariantParams) middleware.Responder {
+				tx, err := pop.Connect("development")
 		if err != nil {
 			customErrors.Log(err, 500,"restapi.api.MainPostVariantHandler",
 				"Failed to connect to database: development")
 			errPayload := customErrors.DefaultInternalServerError()
-			return operations.NewMainPostVariantInternalServerError().WithPayload(errPayload)
+			return operations.NewPostVariantInternalServerError().WithPayload(errPayload)
 		}
 
 		_, err = getVariantByID(params.Variant.ID.String(), tx)
@@ -125,12 +149,12 @@ func configureAPI(api *operations.VariantServiceAPI) http.Handler {
 				"It cannot be overwritten with POST; please use PUT instead."
 			customErrors.Log(nil, 405,"restapi.api.MainPostVariantHandler", message)
 			errPayload := &apimodels.Error{Code: 405001, Message: &message}
-			return operations.NewMainPostVariantMethodNotAllowed().WithPayload(errPayload)
+			return operations.NewPostVariantMethodNotAllowed().WithPayload(errPayload)
 		}
 
 		newVariant, errPayload := transformations.VariantAPIToDataModel(*params.Variant, tx)
 		if errPayload != nil {
-			return operations.NewMainPostVariantInternalServerError().WithPayload(errPayload)
+			return operations.NewPostVariantInternalServerError().WithPayload(errPayload)
 		}
 
 		_, err = tx.ValidateAndCreate(newVariant)
@@ -138,7 +162,7 @@ func configureAPI(api *operations.VariantServiceAPI) http.Handler {
 			customErrors.Log(err, 500,"restapi.api.MainPostVariantHandler",
 				"ValidateAndCreate into database failed")
 			errPayload := customErrors.DefaultInternalServerError()
-			return operations.NewMainPostVariantInternalServerError().WithPayload(errPayload)
+			return operations.NewPostVariantInternalServerError().WithPayload(errPayload)
 		}
 
 		dataVariant, err := getVariantByID(newVariant.ID.String(), tx)
@@ -146,18 +170,18 @@ func configureAPI(api *operations.VariantServiceAPI) http.Handler {
 			customErrors.Log(err, 500,"restapi.api.MainPostVariantHandler, restapi.getVariantByID(string)",
 				"Failed to get variant by ID from database immediately following its creation")
 			errPayload := customErrors.DefaultInternalServerError()
-			return operations.NewMainPostVariantInternalServerError().WithPayload(errPayload)
+			return operations.NewPostVariantInternalServerError().WithPayload(errPayload)
 		}
 
 		apiVariant, errPayload := transformations.VariantDataToAPIModel(*dataVariant)
 		if err != nil {
-			return operations.NewMainPostVariantInternalServerError().WithPayload(errPayload)
+			return operations.NewPostVariantInternalServerError().WithPayload(errPayload)
 		}
 
 		// TODO check and fix the construction of this URL
 		location := params.HTTPRequest.URL.Host + params.HTTPRequest.URL.EscapedPath() +
 			"/" + apiVariant.ID.String()
-		return operations.NewMainPostVariantCreated().WithPayload(apiVariant).WithLocation(location)
+		return operations.NewPostVariantCreated().WithPayload(apiVariant).WithLocation(location)
 	})
 
 	api.ServerShutdown = func() {}
