# variant-service/api/restapi/operations/post_individual_urlbuilder.go
@@ -11,15 +11,15 @@ import (
 	golangswaggerpaths "path"
 )
 
-// MainPostVariantURL generates an URL for the main post variant operation
-type MainPostVariantURL struct {
+// PostIndividualURL generates an URL for the post individual operation
+type PostIndividualURL struct {
 	_basePath string
 }
 
 // WithBasePath sets the base path for this url builder, only required when it's different from the
 // base path specified in the swagger spec.
 // When the value of the base path is an empty string
-func (o *MainPostVariantURL) WithBasePath(bp string) *MainPostVariantURL {
+func (o *PostIndividualURL) WithBasePath(bp string) *PostIndividualURL {
 	o.SetBasePath(bp)
 	return o
 }
@@ -27,15 +27,15 @@ func (o *MainPostVariantURL) WithBasePath(bp string) *MainPostVariantURL {
 // SetBasePath sets the base path for this url builder, only required when it's different from the
 // base path specified in the swagger spec.
 // When the value of the base path is an empty string
-func (o *MainPostVariantURL) SetBasePath(bp string) {
+func (o *PostIndividualURL) SetBasePath(bp string) {
 	o._basePath = bp
 }
 
 // Build a url path and query string
-func (o *MainPostVariantURL) Build() (*url.URL, error) {
+func (o *PostIndividualURL) Build() (*url.URL, error) {
 	var result url.URL
 
-	var _path = "/variants"
+	var _path = "/individuals"
 
 	_basePath := o._basePath
 	result.Path = golangswaggerpaths.Join(_basePath, _path)
@@ -44,7 +44,7 @@ func (o *MainPostVariantURL) Build() (*url.URL, error) {
 }
 
 // Must is a helper function to panic when the url builder returns an error
-func (o *MainPostVariantURL) Must(u *url.URL, err error) *url.URL {
+func (o *PostIndividualURL) Must(u *url.URL, err error) *url.URL {
 	if err != nil {
 		panic(err)
 	}
@@ -55,17 +55,17 @@ func (o *MainPostVariantURL) Must(u *url.URL, err error) *url.URL {
 }
 
 // String returns the string representation of the path with query string
-func (o *MainPostVariantURL) String() string {
+func (o *PostIndividualURL) String() string {
 	return o.Must(o.Build()).String()
 }
 
 // BuildFull builds a full url with scheme, host, path and query string
-func (o *MainPostVariantURL) BuildFull(scheme, host string) (*url.URL, error) {
+func (o *PostIndividualURL) BuildFull(scheme, host string) (*url.URL, error) {
 	if scheme == "" {
-		return nil, errors.New("scheme is required for a full url on MainPostVariantURL")
+		return nil, errors.New("scheme is required for a full url on PostIndividualURL")
 	}
 	if host == "" {
-		return nil, errors.New("host is required for a full url on MainPostVariantURL")
+		return nil, errors.New("host is required for a full url on PostIndividualURL")
 	}
 
 	base, err := o.Build()
@@ -79,6 +79,6 @@ func (o *MainPostVariantURL) BuildFull(scheme, host string) (*url.URL, error) {
 }
 
 // StringFull returns the string representation of a complete url
-func (o *MainPostVariantURL) StringFull(scheme, host string) string {
+func (o *PostIndividualURL) StringFull(scheme, host string) string {
 	return o.Must(o.BuildFull(scheme, host)).String()
 }
