# variant-service/api/swagger.yml
@@ -27,9 +27,67 @@ schemes:
 - http
 swagger: "2.0" # version used by go-swagger tool
 paths:
+  /individuals:
+    post:
+      operationId: post_individual
+      summary: Add an individual to the database
+      parameters:
+      - name: individual
+        in: body
+        schema:
+          $ref: '#/definitions/Individual'
+      responses:
+        201:
+          description: New individual created
+          schema:
+            $ref: "#/definitions/Individual"
+          headers:
+            Location:
+              type: string
+              format: url
+        405:
+          description: Forbidden to overwrite individual in post
+          schema:
+            $ref: "#/definitions/Error"
+        500:
+          description: Internal error - Individual not created
+          schema:
+            $ref: "#/definitions/Error"
+    get:
+      operationId: get_individuals
+      summary: Get all individuals
+      responses:
+        200:
+          description: Return individuals
+          schema:
+            type: array
+            items:
+              $ref: '#/definitions/Individual'
+        500:
+          description: Internal error
+          schema:
+            $ref: "#/definitions/Error"
+
+  /individuals/{individual_id}:
+    get:
+      operationId: get_one_individual
+      summary: Get specific individual
+      parameters:
+      - $ref: '#/parameters/individual_id'
+      responses:
+        200:
+          description: Return individual
+          schema:
+            $ref: '#/definitions/Individual'
+        404:
+          description: Individual not found
+        500:
+          description: Internal error
+          schema:
+            $ref: "#/definitions/Error"
   /variants:
     get:
-      operationId: main.get_variants
+      operationId: get_variants
       summary: Get all variants within genomic range
       parameters:
         - name: chromosome
@@ -60,7 +118,7 @@ paths:
           schema:
             $ref: "#/definitions/Error"
     post:
-      operationId: main.post_variant
+      operationId: post_variant
       summary: Add a variant to the database
       parameters:
         - name: variant
@@ -68,7 +126,6 @@ paths:
           schema:
             $ref: '#/definitions/Variant'
       responses:
-        # TODO Add error code 
         201:
           description: New variant created
           schema:
@@ -76,6 +133,7 @@ paths:
           headers:
             Location:
               type: string
+              format: url
         400:
           description: Variant provided in body does not pass schema validation
           schema:
@@ -88,6 +146,143 @@ paths:
           description: Internal error - Variant not created
           schema:
             $ref: "#/definitions/Error"
+  /variants/{variant_id}:
+    get:
+      operationId: get_one_variant
+      summary: Get specific variant
+      parameters:
+        - $ref: '#/parameters/variant_id'
+      responses:
+        200:
+          description: Return variant
+          schema:
+            $ref: '#/definitions/Variant'
+        404:
+          description: Variant not found
+          schema:
+            $ref: "#/definitions/Error"
+        500:
+          description: Internal error
+          schema:
+            $ref: "#/definitions/Error"
+
+  /calls:
+    post:
+      operationId: post_call
+      summary: Add a call to the database
+      parameters:
+        - name: call
+          in: body
+          schema:
+            $ref: '#/definitions/Call'
+      responses:
+        201:
+          description: New call created
+          schema:
+            $ref: "#/definitions/Call"
+          headers:
+            Location:
+              type: string
+              format: url
+        405:
+          description: Cannot overwrite call
+          schema:
+            $ref: "#/definitions/Error"
+    get:
+      operationId: get_calls
+      summary: Get all calls
+      responses:
+        200:
+          description: Return calls
+          schema:
+            type: array
+            items:
+              $ref: '#/definitions/Call'
+
+  /calls/{call_id}:
+    get:
+      operationId: get_one_call
+      summary: Get specific call
+      parameters:
+        - $ref: '#/parameters/call_id'
+      responses:
+        200:
+          description: Return call
+          schema:
+            $ref: '#/definitions/Call'
+        404:
+          description: Call not found
+          schema:
+            $ref: "#/definitions/Error"
+        500:
+          description: Internal error
+          schema:
+            $ref: "#/definitions/Error"
+
+  /individuals/{individual_id}/variants:
+    get:
+      operationId: get_variants_by_individual
+      summary: Get variants called in an individual
+      parameters:
+        - $ref: '#/parameters/individual_id'
+      responses:
+        200:
+          description: Return individuals
+          schema:
+            type: array
+            items:
+              $ref: '#/definitions/Variant'
+        404:
+          description: Individual does not exist
+          schema:
+            $ref: "#/definitions/Error"
+
+  /variants/{variant_id}/individuals:
+    get:
+      operationId: get_individuals_by_variant
+      summary: Get individuals with a given variant called
+      parameters:
+        - $ref: '#/parameters/variant_id'
+      responses:
+        200:
+          description: Return individuals
+          schema:
+            type: array
+            items:
+              $ref: '#/definitions/Individual'
+        404:
+          description: Variant does not exist
+          schema:
+            $ref: "#/definitions/Error"
+
+parameters:
+  variant_id:
+    name: variant_id
+    description: Variant unique identifier
+    in: path
+    type: string
+    format: uuid
+    x-example: bf3ba75b-8dfe-4619-b832-31c4a087a589
+    required: true
+
+  individual_id:
+    name: individual_id
+    description: Individual unique identifier
+    in: path
+    type: string
+    format: uuid
+    x-example: bf3ba75b-8dfe-4619-b832-31c4a087a589
+    required: true
+
+  call_id:
+    name: call_id
+    description: Call unique identifier
+    in: path
+    type: string
+    format: uuid
+    x-example: bf3ba75b-8dfe-4619-b832-31c4a087a589
+    required: true
+
 definitions:
   Error:
     type: object
